[gd_scene load_steps=14 format=2]

[ext_resource path="res://game_objects/primitive/Node2D_Container.gd" type="Script" id=1]
[ext_resource path="res://game_objects/primitive/Actor.gd" type="Script" id=2]
[ext_resource path="res://game_objects/properties/Draw_Priority_Setting.tscn" type="PackedScene" id=3]
[ext_resource path="res://game_objects/primitive/Area_Basic.tscn" type="PackedScene" id=4]
[ext_resource path="res://game_objects/primitive/Physics_Body_Area.gd" type="Script" id=5]
[ext_resource path="res://game_objects/primitive/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://game_objects/utilities/Z_Axis_Detector.gd" type="Script" id=7]
[ext_resource path="res://game_objects/utilities/Shadow_Offset.gd" type="Script" id=8]
[ext_resource path="res://assets/shadow.png" type="Texture" id=9]
[ext_resource path="res://game_objects/primitive/Z_Axis.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.1152, 11.2389 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 44.0435, 38.4464 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 65.8094, 60.2123 )

[node name="Actor" type="Node2D"]
script = ExtResource( 1 )

[node name="Body" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 3
script = ExtResource( 2 )
terminal_velocity = Vector3( 0, 0, 0 )

[node name="Draw_Priority_Setting" parent="Body" instance=ExtResource( 3 )]

[node name="Body_Shape" type="CollisionShape2D" parent="Body"]
shape = SubResource( 1 )

[node name="Body_Area" parent="Body" instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="Hurtbox" parent="Body" instance=ExtResource( 6 )]

[node name="Area_Shape" parent="Body/Hurtbox" index="0"]
shape = SubResource( 2 )

[node name="Z_Axis_Detector" type="Area2D" parent="Body"]
script = ExtResource( 7 )

[node name="Detector_Shape" type="CollisionShape2D" parent="Body/Z_Axis_Detector"]
shape = SubResource( 3 )

[node name="Shadow_Offset" type="Position2D" parent="Body"]
script = ExtResource( 8 )

[node name="Shadow" type="Sprite" parent="Body/Shadow_Offset"]
scale = Vector2( 2.5, 2 )
texture = ExtResource( 9 )

[node name="Z_Axis" parent="Body" instance=ExtResource( 10 )]

[node name="Sprite_Offset" type="Position2D" parent="Body/Z_Axis"]

[node name="Particle_Emitter" type="Position2D" parent="Body/Z_Axis/Sprite_Offset"]


[editable path="Body/Hurtbox"]

[editable path="Body/Hurtbox/Z_Axis"]

[editable path="Body/Z_Axis"]
